--- a/sway/.config/waybar/style.css
+++ b/sway/.config/waybar/style.css
@@ -7,18 +7,52 @@
     border: none;
     border-radius: 0px;
     font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free";
+}
+
+window {
+    background-color: transparent;
+}
+
+window#waybar.solo #window{
+    background-color: @background;
+    color: @primary;
     font-size: 17px;
     font-weight: normal;
+    border-radius: 0px 15px 15px 0px;
+    padding: 1px 15px 1px 10px;
+    margin: 3px 3px 3px 0px;
+    opacity:0.9;
+    border-style: solid;
+    border-color: @primary;
+    border-width: 1px 1px 1px 0px;
 }
 
-window#waybar {
-    background-color: @base;
-    background: transparent;
-    color: @text;
+window#waybar.tiled #window{
+    background-color: @background;
+    color: @primary;
+    font-size: 17px;
+    font-weight: normal;
+    border-radius: 0px 15px 15px 0px;
+    padding: 1px 15px 1px 10px;
+    margin: 3px 3px 3px 0px;
+    opacity:0.9;
+    border-style: solid;
+    border-color: @primary;
+    border-width: 1px 1px 1px 0px;
 }
 
-window#waybar.hidden {
-    opacity: 0.2;
+window#waybar.empty #window{
+    background-color: @background;
+    color: @primary;
+    font-size: 17px;
+    font-weight: normal;
+    border-radius: 0px 15px 15px 0px;
+    padding: 1px 15px 1px 1px;
+    margin: 3px 3px 3px 0px;
+    opacity:0.9;
+    border-style: solid;
+    border-color: @primary;
+    border-width: 1px 1px 1px 0px;
 }
 
 tooltip {
@@ -30,40 +64,16 @@ tooltip label {
     color: @text;
 }
 
-button {
-    box-shadow: inset 0 -3px transparent;
-    border: none;
-    border-radius: 1;
-}
-
-button:hover {
-    background: inherit;
-    box-shadow: inset 0 -3px @text;
-}
-
 #workspaces button {
-    padding: 0 0;
-    background-color: @mantle;
+    padding: 0px 3px 0px;
+    background: transparent;
     color: @text;
-}
-
-#workspaces button:hover {
-    box-shadow: inherit;
-    text-shadow: inherit;
-    background-image: linear-gradient(0deg, @surface1, @mantle);
+    font-size: 18px;
 }
 
 #workspaces button.focused {
-    background-image: linear-gradient(0deg, @mauve, @surface1);
-    box-shadow: inset 0 -3px @text;
-}
-
-#workspaces button.urgent {
-    background-image: linear-gradient(0deg, @red, @mantle);
-}
-
-#taskbar button.active {
-    background-image: linear-gradient(0deg, @surface1, @mantle);
+    font-size: 22px;
+    color: @peach;
 }
 
 /* Standalone modules */
@@ -73,6 +83,8 @@ button:hover {
 #clock {
     background-color: @background;
     color: @primary;
+    font-size: 17px;
+    font-weight: normal;
     border-radius: 15px;
     padding: 1px 15px 1px 15px;
     margin: 3px 5px 3px 5px;
@@ -82,9 +94,12 @@ button:hover {
 
 /* Lefthand modules in block */
 #pulseaudio,
+#workspaces,
 #disk {
     background-color: @background;
     color: @primary;
+    font-size: 17px;
+    font-weight: normal;
     border-radius: 15px 0px 0px 15px;
     padding: 1px 10px 1px 15px;
     margin: 3px 0px 3px 5px;
@@ -99,6 +114,8 @@ button:hover {
 #cpu {
     background-color: @background;
     color: @primary;
+    font-size: 17px;
+    font-weight: normal;
     border-radius: 0px;
     padding: 1px 10px 1px 10px;
     margin: 3px 0px 3px 0px;
@@ -113,6 +130,8 @@ button:hover {
 #battery {
     background-color: @background;
     color: @primary;
+    font-size: 17px;
+    font-weight: normal;
     border-radius: 0px 15px 15px 0px;
     padding: 1px 15px 1px 10px;
     margin: 3px 3px 3px 0px;
@@ -127,91 +146,10 @@ button:hover {
     color: @mantle;
 }
 
-#window,
-#workspaces {
-    margin: 0 4px;
-    font-weight: bold;
-}
-
 .modules-left > widget:first-child > #workspaces {
     margin-left: 0;
 }
 
 .modules-right > widget:last-child > #workspaces {
     margin-right: 0;
-}
-
-#custom-weather {
-    background-color: @teal;
-    color: @mantle;
-    margin-right: 5px;
-}
-
-#custom-kernel {
-    background-color: @rosewater;
-    color: @mantle;
-}
-
-@keyframes blink {
-    to {
-        background-color: @mantle;
-        color: @text;
-    }
-}
-
-label:focus {
-    background-color: @mantle;
-}
-
-#network {
-    background-color: @peach;
-    color: @mantle;
-}
-
-#network.disconnected {
-    background-color: red;
-    color: @mantle;
-}
-
-#bluetooth {
-    background-color: @maroon;
-    color: @mantle;
-    min-width: 40px;
-}
-
-#temperature {
-    background-color: @pink;
-    color: @mantle;
-    min-width: 37px;
-}
-
-#temperature.critical {
-    background-color: red;
-    color: @mantle;
-    min-width: 37px;
-}
-
-#mpris {
-    background-color: @base;
-    color: @text;
-}
-
-#idle_inhibitor {
-    background-color: @base;
-    color: @text;
-    font-family: Inter;
-}
-
-#idle_inhibitor.activated {
-    background-color: @text;
-    color: @base;
-}
-
-#scratchpad {
-    background-color: @base;
-    color: @text;
-}
-
-#scratchpad.empty {
-    background-color: transparent;
 }
