--- a/sway/.config/waybar/style.css
+++ b/sway/.config/waybar/style.css
@@ -6,6 +6,7 @@
 * {
     border: none;
     border-radius: 0px;
+    border-color: @primary;
     font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free";
 }
 
@@ -25,7 +26,6 @@ window#waybar.solo #window{
     margin: 3px 3px 3px 0px;
     opacity:0.9;
     border-style: solid;
-    border-color: @primary;
     border-width: 1px 1px 1px 0px;
 }
 
@@ -39,7 +39,6 @@ window#waybar.empty #window{
     margin: 3px 3px 3px 0px;
     opacity:0.9;
     border-style: solid;
-    border-color: @primary;
     border-width: 1px 1px 1px 0px;
 }
 
@@ -55,7 +54,7 @@ tooltip label {
 #workspaces button {
     padding: 0px 3px 0px;
     background: transparent;
-    color: @text;
+    color: @primary;
     font-size: 18px;
 }
 
@@ -78,7 +77,8 @@ tooltip label {
     padding: 1px 15px 1px 15px;
     margin: 3px 5px 3px 5px;
     opacity:0.9;
-    border:1px solid @primary;
+    border-style: solid;
+    border-width: 1px;
 }
 
 /* Lefthand modules in block */
@@ -94,7 +94,6 @@ tooltip label {
     margin: 3px 0px 3px 5px;
     opacity:0.9;
     border-style: solid;
-    border-color: @primary;
     border-width: 1px 0px 1px 1px;
 }
 
@@ -110,7 +109,6 @@ tooltip label {
     margin: 3px 0px 3px 0px;
     opacity:0.9;
     border-style: solid;
-    border-color: @primary;
     border-width: 1px 0px 1px 0px;
 }
 
@@ -126,7 +124,6 @@ tooltip label {
     margin: 3px 3px 3px 0px;
     opacity:0.9;
     border-style: solid;
-    border-color: @primary;
     border-width: 1px 1px 1px 0px;
 }
 
