--- a/sway/.config/waybar/style.css
+++ b/sway/.config/waybar/style.css
@@ -4,56 +4,17 @@
 @define-color background @base;
 
 * {
-    border: none;
-    border-radius: 0px;
-    border-color: @primary;
     font-family: "JetBrainsMono Nerd Font", "Font Awesome 6 Free";
 }
 
-window {
-    background-color: transparent;
-}
-
-window#waybar.floating #window,
-window#waybar.tiled #window,
-window#waybar.solo #window{
-    background-color: @background;
+window#waybar {
+    background: @background;
+    border-radius: 10px;
     color: @primary;
-    font-size: 16px;
-    font-weight: normal;
-    border-radius: 0px 10px 10px 0px;
-    padding: 1px 15px 1px 10px;
-    margin: 3px 3px 3px 0px;
-    opacity:0.9;
-    border-style: solid;
-    border-width: 1px 1px 1px 0px;
-}
-
-window#waybar.empty #window{
-    background-color: @background;
-    color: @primary;
-    font-size: 16px;
-    font-weight: normal;
-    border-radius: 0px 10px 10px 0px;
-    padding: 1px 15px 1px 1px;
-    margin: 3px 3px 3px 0px;
-    opacity:0.9;
-    border-style: solid;
-    border-width: 1px 1px 1px 0px;
-}
-
-tooltip {
-    background-color: @base;
-    border: 1px solid @surface1;
-}
-
-tooltip label {
-    color: @text;
 }
 
 #workspaces button {
     padding: 0px 3px 0px;
-    background: transparent;
     color: @primary;
     font-size: 18px;
 }
@@ -63,73 +24,88 @@ tooltip label {
     color: @peach;
 }
 
-/* Standalone modules */
-#tray,
-#diskdd,
-#custom-power,
-#custom-updates,
-#clock {
-    background-color: @background;
+#clock,
+#workspaces{
+    background-color: transparent;
     color: @primary;
     font-size: 16px;
     font-weight: normal;
-    border-radius: 10px;
-    padding: 1px 15px 1px 15px;
-    margin: 3px 5px 3px 5px;
-    opacity:0.9;
-    border-style: solid;
-    border-width: 1px;
+    margin: 3px 10px;
 }
 
-/* Lefthand modules in block */
-#pulseaudio,
-#workspaces,
-#disk {
-    background-color: @background;
-    color: @primary;
-    font-size: 16px;
-    font-weight: normal;
-    border-radius: 10px 0px 0px 10px;
-    padding: 1px 10px 1px 15px;
-    margin: 3px 0px 3px 5px;
-    opacity:0.9;
-    border-style: solid;
-    border-width: 1px 0px 1px 1px;
-}
-
-/* Inner modules in block */
-#memory,
-#cpu {
-    background-color: @background;
-    color: @primary;
-    font-size: 16px;
-    font-weight: normal;
-    border-radius: 0px;
-    padding: 1px 10px 1px 10px;
-    margin: 3px 0px 3px 0px;
-    opacity:0.9;
-    border-style: solid;
-    border-width: 1px 0px 1px 0px;
-}
-
-/* Righthand modules in block */
 #language,
-#battery {
-    background-color: @background;
+#battery,
+#memory,
+#cpu,
+#disk,
+#pulseaudio,
+#network,
+#bluetooth,
+#tray,
+#custom-power,
+#custom-updates {
+    background-color: transparent;
     color: @primary;
     font-size: 16px;
     font-weight: normal;
-    border-radius: 0px 10px 10px 0px;
-    padding: 1px 15px 1px 10px;
-    margin: 3px 3px 3px 0px;
-    opacity:0.9;
-    border-style: solid;
-    border-width: 1px 1px 1px 0px;
+    /* border-bottom: 2px solid; */
+    margin: 3px 7px;
+    padding: 0 3px;
+}
+
+#cpu {
+    color: @green;
+    border-color: @green;
+}
+
+#disk {
+    color: @peach;
+    border-color: @peach;
+}
+
+#custom-updates {
+    color: @red;
+    border-color: @red;
+}
+
+#battery {
+    color: @yellow;
+    border-color: @yellow;
+}
+
+#pulseaudio {
+    color: @blue;
+    border-color: @blue;
+}
+
+#language {
+    color: @mauve;
+    border-color: @mauve;
+}
+
+#network {
+    color: @rosewater;
+    border-color: @rosewater;
+}
+
+#bluetooth {
+    color: @blue;
+    border-color: @blue;
 }
 
 #pulseaudio.muted {
     background-color: @red;
     color: @mantle;
+    border-bottom: none;
+}
+
+tooltip {
+    background-color: @base;
+    border: 1px solid @surface1;
+}
+
+tooltip label {
+    color: @text;
 }
 
 .modules-left > widget:first-child > #workspaces {
