--- a/sway/.config/waybar/style.css
+++ b/sway/.config/waybar/style.css
@@ -30,7 +30,8 @@ window#waybar {
     color: @primary;
     font-size: 16px;
     font-weight: normal;
-    margin: 3px 10px;
+    margin: 3px 5px;
+    padding: 0 10px;
 }
 
 #language,
@@ -74,8 +75,8 @@ window#waybar {
 }
 
 #pulseaudio {
-    color: @blue;
-    border-color: @blue;
+    color: @sky;
+    border-color: @sky;
 }
 
 #language {
