Custom weather module on Waybar

--- a/sway/.config/waybar/style.css
+++ b/sway/.config/waybar/style.css
@@ -44,6 +44,7 @@ window#waybar {
 #bluetooth,
 #tray,
 #custom-power,
+#custom-weather,
 #power-profiles-daemon,
 #custom-updates {
     background-color: transparent;
